# Artax

./: .travis.yml  Cargo.toml  MZtest.csv  README.md  config.toml
Examples/: README.md
Examples/cap/: Cargo.toml  test.txt
Examples/cap/src/: main.rs
Examples/cap/src/schema/: msg.capnp  msg_capnp.rs
Examples/channels/: Cargo.toml
Examples/channels/src/: main.rs  reduction.rs
Examples/flatb/: Cargo.toml
Examples/flatb/src/: main.rs
Examples/majordomo/: Cargo.toml  broker.rs  client.rs  worker.rs
Examples/majordomo/broker/src/: broker.rs
Examples/majordomo/broker/src/protos/: message.proto
Examples/majordomo/client/: MZconvert.csv  convert.py
Examples/majordomo/client/src/: client.rs
Examples/majordomo/worker/: Cargo.toml
Examples/majordomo/worker/src/: reduction.rs  worker.rs
Examples/protob/: Cargo.toml  MZ.csv
Examples/protob/src/: main.backup2.rs  main.rs  main.rs.backup
Examples/threads/src/: reduction.rs
Examples/zmq/src/: main.rs
examples/libraries/: liblibtest.rlib
examples/majordomo/broker/: Cargo.toml
examples/majordomo/client/: Cargo.toml  TIC.csv
examples/majordomo/client/src/: client.rs
examples/peakfinder/: Cargo.toml  README.md  lib.rs  main.rs  resolving_power.rs
examples/peakfinder/client/src/: client.rs  resolving_power.rs
examples/peakfinder/client/src/protos/: message.proto
examples/procpool/: Cargo.toml
examples/procpool/src/: main.rs
examples/protob/: Cargo.toml  README.md
examples/protob/src/: main.rs
examples/rpower/: Cargo.toml
examples/rpower/src/: main.rs
examples/threadpool/broker/: Cargo.toml
examples/threadpool/broker/src/: broker.rs  reduction.rs
examples/threadpool/broker/src/protos/: message.rs
examples/threadpool/client/: Cargo.toml  TICint.csv
examples/threadpool/client/src/: client.rs
examples/threads/: Cargo.toml
examples/threads/src/: main.rs  reduction.rs
examples/zmq/: Cargo.toml
scripts/: MZint.csv  README.md  convert.py
src/: client.rs  main.rs  publisher.rs  reduction.rs  server.rs  subscriber.rs  worker.rs
src/client/src/: client.rs  reduction.rs
src/client/src/protos/: message.proto
src/protos/: message.rs
